--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,7 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:elevation="4dp"/>
 
-            <FrameLayout
-                android:id="@+id/fragment_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/toolbar"
-                android:layout_above="@id/bottom_navigation"/>
+
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_navigation"
                 android:layout_width="match_parent"
@@ -35,6 +30,15 @@
                 android:layout_alignParentBottom="true"
                 app:menu="@menu/bottom_navigation_bar"
                 android:background="?android:attr/windowBackground"/>
+            <fragment
+                android:id="@+id/nav_host_fragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                android:layout_below="@id/toolbar"
+                android:layout_above="@id/bottom_navigation"
+                app:navGraph="@navigation/nav_graph" />
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -44,6 +48,8 @@
         android:id="@+id/nav_view"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer_menu"/>
+
+
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
