--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,13 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/holo_red_light">
+    android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal"
+        android:id="@+id/choose_game_layout">
+        <ImageView
+            android:layout_width="100sp"
+            android:layout_height="100sp"
+            android:src="@mipmap/ic_launcher_round"
+            android:id="@+id/game_icon_create_game"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/game_icon_create_game"
+            android:paddingStart="30sp"
+            android:layout_centerInParent="true"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/fragment_game_choose_game_hint"
+                android:textSize="30sp"
+                 />
+        </RelativeLayout>
+    </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Game fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true" />
+        android:layout_marginTop="50sp"
+        android:id="@+id/fragment_game_enter_description_editText"
+        android:hint="@string/fragment_game_enter_description"
+        android:maxLength="200"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="50sp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_game_enter_amount_of_people" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_marginStart="10sp"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_game_enter_amount_of_people_editText"
+            android:inputType="number"
+            android:maxLength="2"/>
+    </LinearLayout>
 
-</RelativeLayout>
+
+
+
+</LinearLayout>
