changed navigation bar

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,4 +15,8 @@
         android:id="@+id/gameFragment"
         android:name="com.example.gosquad.GameFragment"
         android:label="GameFragment" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.gosquad.ProfileFragment"
+        android:label="ProfileFragment" />
 </navigation>
