--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -12,4 +12,9 @@
         android:id="@+id/chatFragment"
         android:icon="@drawable/ic_baseline_chat_24"
         android:title="@string/chat_icon" />
+    <item
+        android:id="@+id/profileFragment"
+        android:icon="@drawable/ic_baseline_person_24"
+        android:title="@string/profile_icon"
+        />
 </menu>
