--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -45,13 +45,30 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/profile_fragment_profile_image" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#2b2b4b"
-                android:id="@+id/profile_navigation"
-                app:menu="@menu/profile_navigation_bar"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <com.google.android.material.bottomnavigation.BottomNavigationView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#2b2b4b"
+                    android:id="@+id/profile_navigation"
+                    app:menu="@menu/profile_navigation_bar"/>
+
+                <fragment
+                    android:id="@+id/profile_nav_host_fragment"
+                    android:name="androidx.navigation.fragment.NavHostFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_above="@id/profile_navigation"
+                    app:defaultNavHost="true"
+                    app:navGraph="@navigation/profile_nav_graph" />
+
+            </LinearLayout>
+
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,6 +93,8 @@
                 android:layout_marginTop="10sp"
                 android:id="@+id/profile_fragment_recycler_view"
                 />
+
+
 
         </LinearLayout>
     </ScrollView>
