--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,15 +31,13 @@
                 app:menu="@menu/bottom_navigation_bar"
                 android:background="?android:attr/windowBackground"/>
 
-            <fragment
-                android:id="@+id/nav_host_fragment"
-                android:name="androidx.navigation.fragment.NavHostFragment"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:defaultNavHost="true"
-                android:layout_below="@id/toolbar"
                 android:layout_above="@id/bottom_navigation"
-                app:navGraph="@navigation/nav_graph" />
+                android:layout_below="@id/toolbar"
+                android:id="@+id/fragment_container"
+                />
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
